<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:background="@color/background"
    android:layout_height="match_parent">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:elevation="@dimen/dimen5"
        app:cardCornerRadius="@dimen/dimen5">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="@dimen/dimen8">

            <TextView
                android:id="@+id/tvNote"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:textColor="@color/md_red_700"
                android:gravity="left"
                android:textSize="@dimen/dimen18sp"
                android:text="@string/Note"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:textColor="@color/md_blue_grey_300"
                android:gravity="left"
                android:textSize="@dimen/dimen18sp"
                android:text="@string/EnterPostfix" />

            <com.google.android.material.textfield.TextInputLayout
                android:layout_height="wrap_content"
                android:layout_width="match_parent"
                android:id="@+id/cv_et_String"
                android:layout_marginTop="@dimen/dimen5">

                <EditText
                    android:id="@+id/ac_et_postfixString"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:digits="0123456789 *+^-%"
                    android:hint="E.g. 10 12 +"/>


            </com.google.android.material.textfield.TextInputLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/ac_btn_evaluate"
                    android:layout_width="@dimen/dimen100"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/dimen5"
                    android:layout_weight="1"
                    android:background="@color/colorPrimaryDark"
                    android:text="@string/btn_evaluate"
                    android:textColor="@color/md_white_1000" />

                <Button
                    android:id="@+id/ac_btn_clear"
                    android:layout_width="100dp"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/dimen5"
                    android:layout_weight="1"
                    android:background="@color/colorPrimaryDark"
                    android:text="@string/btn_clear"
                    android:textColor="@color/md_white_1000" />

            </LinearLayout>
            <!--<LinearLayout-->
                <!--android:layout_width="wrap_content"-->
                <!--android:layout_height="wrap_content"-->
                <!--android:orientation="horizontal"-->
                <!--android:layout_gravity="center">-->

            <!--<Button-->
                <!--android:id="@+id/ac_btn_evaluate"-->
                <!--android:layout_width="150dp"-->
                <!--android:layout_weight="1"-->
                <!--android:layout_height="wrap_content"-->
                <!--android:text="Evaluate"-->
                <!--android:textSize="@dimen/dimen15sp"-->
                <!--android:textColor="@color/md_white_1000"-->
                <!--android:layout_margin="@dimen/dimen5"-->
                <!--android:background="@drawable/gradient_bg"/>-->

            <!--<Button-->
                <!--android:id="@+id/ac_btn_clear"-->
                <!--android:layout_width="150dp"-->
                <!--android:layout_weight="1"-->
                <!--android:layout_height="wrap_content"-->
                <!--android:text="Clear"-->
                <!--android:textSize="@dimen/dimen15sp"-->
                <!--android:textColor="@color/md_white_1000"-->
                <!--android:layout_margin="@dimen/dimen5"-->
                <!--android:background="@drawable/gradient_bg"/>-->
            <!--</LinearLayout>-->


        </LinearLayout>
    </androidx.cardview.widget.CardView>
    <androidx.cardview.widget.CardView
        android:id="@+id/cvAnswer2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/dimen5"
        android:visibility="gone"
        android:elevation="@dimen/dimen5"
        app:cardCornerRadius="@dimen/dimen5">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/Answer"
            android:padding="@dimen/dimen2"
            android:textColor="@color/md_blue_grey_400"
            android:textSize="@dimen/dimen18sp"/>

        <TextView
            android:id="@+id/ac_tv_evaluateResult"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:padding="@dimen/dimen2"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="@dimen/dimen50sp"
            android:textStyle="bold" />
    </LinearLayout>
</androidx.cardview.widget.CardView>


    </LinearLayout>