<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    android:orientation="vertical">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/dimen5"
        android:elevation="@dimen/dimen5"
        app:cardCornerRadius="@dimen/dimen5">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/dimen2"
            android:orientation="vertical"
            android:padding="@dimen/dimen2">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/spinner_border">

                <Spinner
                    android:id="@+id/ac_spProfile"
                    android:dropDownVerticalOffset="30dp"
                    android:padding="@dimen/dimen3"
                    style="@style/Widget.AppCompat.DropDownItem.Spinner"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/dimen35"
                    android:spinnerMode="dropdown">

                </Spinner>

            </RelativeLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/cv_et_String"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dimen35">


                <EditText
                    android:id="@+id/ac_et_String"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/hintEnterString"
                    android:inputType="text"
                    android:textSize="@dimen/dimen20sp"/>


            </com.google.android.material.textfield.TextInputLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/ac_btn_convert"
                    android:layout_width="@dimen/dimen100"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/dimen5"
                    android:layout_weight="1"
                    android:background="@color/colorPrimaryDark"
                    android:text="@string/btn_convert"
                    android:textColor="@color/md_white_1000" />

                <Button
                    android:id="@+id/ac_btn_clear"
                    android:layout_width="100dp"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/dimen5"
                    android:layout_weight="1"
                    android:background="@color/colorPrimaryDark"
                    android:text="@string/btn_clear"
                    android:textColor="@color/md_white_1000" />

            </LinearLayout>
        </LinearLayout>
    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/cvAnswer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/dimen5"
        android:elevation="@dimen/dimen5"
        android:visibility="gone"
        app:cardCornerRadius="@dimen/dimen5">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/Answer"
            android:padding="@dimen/dimen2"
            android:textColor="@color/md_blue_grey_400"
            android:textSize="@dimen/dimen20sp"/>

        <TextView
            android:id="@+id/ac_tv_result"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:padding="@dimen/dimen2"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="@dimen/dimen50sp"
            android:textStyle="bold" />
    </LinearLayout>
    </androidx.cardview.widget.CardView>


</LinearLayout>
