<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    android:orientation="vertical">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/dimen5"
        android:layout_marginBottom="2dp"
        android:elevation="@dimen/dimen5"
        app:cardCornerRadius="@dimen/dimen5">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/dimen5"
            android:orientation="vertical"
            android:padding="@dimen/dimen5">

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/cv_et_Node"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">


                <EditText
                    android:id="@+id/ac_et_Node"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="left"
                    android:hint="Enter Nodes to Generate Binary Tree"
                    android:digits="0123456789"
                    android:inputType="number"
                    android:maxLength="3"
                    android:textSize="@dimen/dimen20sp" />


            </com.google.android.material.textfield.TextInputLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/ac_btn_add"
                    android:layout_width="@dimen/dimen100"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/dimen5"
                    android:layout_weight="1"
                    android:background="@color/colorPrimaryDark"
                    android:text="@string/btn_add"
                    android:textColor="@color/md_white_1000" />

                <Button
                    android:id="@+id/ac_btn_clear"
                    android:layout_width="100dp"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/dimen5"
                    android:layout_weight="1"
                    android:background="@color/colorPrimaryDark"
                    android:text="@string/btn_clear"
                    android:textColor="@color/md_white_1000" />

            </LinearLayout>

            <Button
                android:id="@+id/ac_btn_GenerateTree"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/dimen5"
                android:background="@drawable/gradient_bg"
                android:text="@string/btn_done"
                android:textColor="@color/md_white_1000"
                android:textSize="@dimen/dimen15sp" />

            <TextView
                android:id="@+id/tv_nodes"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="@dimen/dimen5"
                android:gravity="center"
                android:textColor="@color/md_blue_grey_300"
                android:textSize="@dimen/dimen18sp"
                android:textStyle="bold"
                android:visibility="gone" />

        </LinearLayout>
    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView

        android:id="@+id/cv_Treeresult"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/dimen5"
        android:layout_marginTop="@dimen/dimen2"
        android:elevation="@dimen/dimen5"
        android:visibility="gone"
        app:cardCornerRadius="@dimen/dimen5">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/dimen2"
            android:orientation="vertical"
            android:padding="@dimen/dimen3">
            <ScrollView
                android:layout_width="match_parent"
                android:layout_weight="1"
                android:layout_height="0dp">
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="5dp"
                android:gravity="center"
                android:text="InOrder Binary Tree"
                android:textColor="@color/md_blue_grey_300"
                android:textSize="@dimen/dimen18sp"
                android:textStyle="bold" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/ac_tv_inorder"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/dimen3"
                    android:gravity="center"
                    android:textSize="@dimen/dimen18sp"
                    android:textStyle="bold" />
            </LinearLayout>

            <TextView
                android:id="@+id/ac_tv_preorder"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="@dimen/dimen5"
                android:gravity="center"
                android:text="PreOrder Binary Tree"
                android:textColor="@color/md_blue_grey_300"
                android:textSize="@dimen/dimen18sp"
                android:textStyle="bold" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/ac_tv_treepreorder"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/dimen3"
                    android:gravity="center"
                    android:textSize="@dimen/dimen18sp"
                    android:textStyle="bold" />
            </LinearLayout>

            <TextView
                android:id="@+id/ac_tv_postorder"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="@dimen/dimen5"
                android:gravity="center"
                android:text="PostOrder Binary Tree"
                android:textColor="@color/md_blue_grey_300"
                android:textSize="@dimen/dimen18sp"
                android:textStyle="bold" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/ac_tv_treepostorder"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/dimen3"
                    android:gravity="center"
                    android:textSize="@dimen/dimen20sp"
                    android:textStyle="bold" />
            </LinearLayout>
                </LinearLayout>
            </ScrollView>
            <Button
                android:id="@+id/ac_btn_displaytree"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/dimen5"
                android:background="@drawable/gradient_bg"
                android:text="@string/btn_generatetree"
                android:textColor="@color/md_white_1000"
                android:textSize="@dimen/dimen15sp" />

        </LinearLayout>
    </androidx.cardview.widget.CardView>

</LinearLayout>


